chore: Minor code cleanups (#4522)
Co-authored-by: Andrey Strukov <andrey.strukov@codecentric.de>